--- a/src/main/resources/templates/form.twig
+++ b/src/main/resources/templates/form.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>questore</title>
+  <title>converter</title>
   <meta charset="utf-8">
 </head>
 <body>
